5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_1183.log
== TEST (2019-05-28 13:15:25) 
-- CODE:
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:15:38) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:20:22) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p[s]>0):
		p[s]=p[s]+v[i]
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:43:54) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p[i]>0):
		p[i]=p[i]+v[i]
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:53:18) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p[i]!=v[i]):
		p[i]=p[i]+v[i]
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:54:07) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p!=v):
		p=p+v[i]
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:55:49) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p!=v):
		p=p+v[i]
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:08) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:14) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:56) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)
a=p
while(i<size(v)):
	if(p!=v):
		a=a+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:15) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(s<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:57:15) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(s<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- EXECUTION TIME:
0.5876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 15, in <module>
    if(p!=v):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:18) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1
p=zeros(i2,dtype=int)

while(s<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:38) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1

p=zeros(i2,dtype=int)

while(s<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:46) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1

p=zeros(i2,dtype=int)

while(s<size(v)):
	if(p!=v):
		p=p+v[s]
	s=s+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:58:12) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1

p=zeros(i2,dtype=int)

while(i<size(v)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:58:23) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
	i=i+1

p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:58:39) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
		print(p)
	i=i+1

p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:58:43) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
		print(i2)
	i=i+1

p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:58:47) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
		print(i2)
	i=i+1

p=zeros(i2,dtype=int)

while(i<size(p)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:08:02) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i=0
i2=0
s=0

while(i<size(v)):
	if(v[i]>0):
		i2=i2+1
		print(i2)
	i=i+1
p=zeros(i2,dtype=int)

while(i>size(p)):
	if(p!=v):
		p=p+v[i]
		print(p)
	i=i+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:05:37) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.558941
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:06) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=po
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:26) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
